# Note: This crate must be built using do.sh

[package]
name = "recurring-payments-service"
version = "0.0.1"
authors = ["Alexey Elizarov <felex-ae@ya.ru>"]
edition = "2018"

[lib]
name = "recurring_payments_service"
crate-type = ["cdylib", "lib"]

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.5.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.5.6"

[features]
program = ["solana-sdk/program"]
default = ["program", "solana-sdk/default"]